供外网接入调用的远程host地址

--- a/cim-forward-route/src/main/resources/application.properties
+++ b/cim-forward-route/src/main/resources/application.properties
@@ -11,6 +11,9 @@ logging.level.root=info
 # 默认消息回调地址
 app.msgcallback.url=http://localhost:8083/msgCallBack
 
+#外部访问链接
+access.net.host=abs.xxx.com
+
 # 关闭健康检查权限
 management.security.enabled=false
 
